--- a/TeapotInstaller/packages.config
+++ b/TeapotInstaller/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetZip" version="1.16.0" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
